--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -8,6 +8,7 @@
 @forward "flex-row-container";
 @forward "grid";
 @forward "hero-image-background";
+@forward "hide-section-heading";
 @forward "horizontal-shadow-after";
 @forward "margin-center";
 @forward "primary-box-shadow";
