--- a/scss/icons/_font.scss
+++ b/scss/icons/_font.scss
@@ -1,12 +1,13 @@
-@use "variables";
+$font-family: "netmatters-icons" !default;
+$font-path: "../font" !default;
 
 @font-face {
-    font-family: "#{variables.$font-family}";
-    src:  url("#{variables.$font-path}/#{variables.$font-family}.eot?choi8y");
-    src:  url("#{variables.$font-path}/#{variables.$font-family}.eot?choi8y#iefix") format("embedded-opentype"),
-          url("#{variables.$font-path}/#{variables.$font-family}.ttf?choi8y") format("truetype"),
-          url("#{variables.$font-path}/#{variables.$font-family}.woff?choi8y") format("woff"),
-          url("#{variables.$font-path}/#{variables.$font-family}.svg?choi8y##{variables.$font-family}") format("svg");
+    font-family: "#{$font-family}";
+    src:  url("#{$font-path}/#{$font-family}.eot?choi8y");
+    src:  url("#{$font-path}/#{$font-family}.eot?choi8y#iefix") format("embedded-opentype"),
+          url("#{$font-path}/#{$font-family}.ttf?choi8y") format("truetype"),
+          url("#{$font-path}/#{$font-family}.woff?choi8y") format("woff"),
+          url("#{$font-path}/#{$font-family}.svg?choi8y##{$font-family}") format("svg");
     font-weight: normal;
     font-style: normal;
     font-display: block;
