--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -358,42 +358,6 @@ h2 {
   font-style: normal;
   font-display: block;
 }
-.icon-hamburger::before {
-  font-family: "netmatters-icons" !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "";
-}
-
-.icon-mouse::before {
-  font-family: "netmatters-icons" !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "";
-}
-
-.icon-paper-plane::before {
-  font-family: "netmatters-icons" !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "";
-}
-
 .icon-bars::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
@@ -466,43 +430,7 @@ h2 {
   content: "";
 }
 
-.icon-phone::before {
-  font-family: "netmatters-icons" !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "";
-}
-
 .icon-right-arrow::before {
-  font-family: "netmatters-icons" !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "";
-}
-
-.icon-search::before {
-  font-family: "netmatters-icons" !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "";
-}
-
-.icon-shield::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
@@ -514,7 +442,67 @@ h2 {
   content: "";
 }
 
+.icon-shield::before {
+  font-family: "netmatters-icons" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+}
+
 .icon-student-cap::before {
+  font-family: "netmatters-icons" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+}
+
+.icon-mouse::before {
+  font-family: "netmatters-icons" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+}
+
+.icon-paper-plane::before {
+  font-family: "netmatters-icons" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+}
+
+.icon-phone::before {
+  font-family: "netmatters-icons" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+}
+
+.icon-search::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
@@ -535,7 +523,7 @@ h2 {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  content: "";
+  content: "";
 }
 
 /*
@@ -642,7 +630,7 @@ a:hover .tooltip-wrapper {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-left: 0.75rem;
@@ -669,6 +657,9 @@ a:hover .tooltip-wrapper {
   margin-right: auto;
   margin-top: 3.125rem;
   margin-bottom: 3.125rem;
+  display: none;
+}
+#accreditations h2 {
   display: none;
 }
 @media (min-width: 0) {
@@ -727,6 +718,9 @@ a:hover .tooltip-wrapper {
   height: 4.375rem;
   margin-top: 0;
   padding: 3.4375rem 0 0;
+}
+#clients h2 {
+  display: none;
 }
 @media (min-width: 0) {
   #clients {
@@ -979,7 +973,7 @@ footer .social-media a.twitter::before {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -1022,6 +1016,9 @@ footer .social-media a.linkedin:hover {
   text-decoration: none;
 }
 
+header h1 {
+  display: none;
+}
 header .content {
   display: -ms-grid;
   display: grid;
@@ -1069,7 +1066,7 @@ header .contact {
   display: none;
 }
 header .phone {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   color: #333645;
   text-decoration: none;
   height: 100%;
@@ -1086,7 +1083,7 @@ header .phone::after {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -1128,7 +1125,8 @@ header .hamburger-menu {
   color: #fff;
   text-align: center;
 }
-header .hamburger-menu h2 {
+header .hamburger-menu .title {
+  display: block;
   text-transform: uppercase;
   font-size: 0.75rem;
   padding: 0.4375rem 0 0;
@@ -1177,7 +1175,7 @@ header form button::after {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -1284,7 +1282,7 @@ header form button {
     border: 1px solid #999aa2;
     background-color: #999aa2;
     color: #fff;
-    font-size: 1.4rem;
+    font-size: 1.55rem;
   }
   header form button:hover {
     background-color: #7e808a;
@@ -1348,10 +1346,10 @@ header form button {
     font-variant: normal;
     text-transform: none;
     line-height: 1;
-    content: "";
+    content: "";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 1.2em;
+    font-size: 1.25em;
     padding-right: 0.5em;
   }
   header .support:hover {
@@ -1379,10 +1377,10 @@ header form button {
     font-variant: normal;
     text-transform: none;
     line-height: 1;
-    content: "";
+    content: "";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 1.2em;
+    font-size: 1.25em;
     padding-right: 0.5em;
   }
   header .contact:hover {
@@ -1502,11 +1500,11 @@ header form button {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 0.75em;
-  padding-left: 0.3rem;
+  padding-left: 0.9rem;
 }
 @media (min-width: 61.9375rem) {
   #hero-image {
@@ -1886,7 +1884,6 @@ nav .category {
   flex-basis: 8ch;
   border-left: 1px solid #262834;
   border-right: 1px solid #484a58;
-  position: static;
 }
 nav .web-design .category-head::before {
   font-family: "netmatters-icons" !important;
@@ -1898,12 +1895,12 @@ nav .web-design .category-head::before {
   content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #926fb1;
 }
 nav .it-support .category-head::before {
@@ -1916,12 +1913,12 @@ nav .it-support .category-head::before {
   content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #4183d7;
 }
 nav .telecoms-services .category-head::before {
@@ -1931,15 +1928,15 @@ nav .telecoms-services .category-head::before {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #d64541;
 }
 nav .bespoke-software .category-head::before {
@@ -1952,12 +1949,12 @@ nav .bespoke-software .category-head::before {
   content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #67809f;
 }
 nav .digital-marketing .category-head::before {
@@ -1970,12 +1967,12 @@ nav .digital-marketing .category-head::before {
   content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #2ecc71;
 }
 nav .cyber-security .category-head::before {
@@ -1985,15 +1982,15 @@ nav .cyber-security .category-head::before {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #f62459;
 }
 nav .developer-training .category-head::before {
@@ -2003,15 +2000,15 @@ nav .developer-training .category-head::before {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
   text-align: center;
   line-height: 1.2;
   display: block;
   padding-top: 1em;
-  padding-bottom: 0.3em;
+  padding-bottom: 0.4em;
   color: #926fb1;
 }
 nav a {
@@ -2028,6 +2025,10 @@ nav h2 {
   text-transform: uppercase;
   line-height: 1;
   margin: 0;
+}
+nav h2 .first {
+  display: block;
+  font-size: 0.625rem;
 }
 nav .subcategories {
   display: flex;
@@ -2157,9 +2158,6 @@ nav .cyber-security .sub-wrapper {
 nav .developer-training .sub-wrapper {
   background-color: #79539a;
 }
-nav h2::first-line {
-  font-size: 0.625rem;
-}
 @media (min-width: 61.9375rem) {
   nav {
     display: block;
@@ -2169,6 +2167,9 @@ nav h2::first-line {
 #services {
   box-sizing: border-box;
   padding: 2rem 1rem;
+}
+#services h2 {
+  display: none;
 }
 #services a {
   margin-left: auto;
@@ -2186,7 +2187,7 @@ nav h2::first-line {
   color: #333645;
   text-align: center;
 }
-#services h2 {
+#services h3 {
   font-size: 1.125rem;
   font-weight: 400;
   margin: 0 0 0.6875rem;
@@ -2212,7 +2213,7 @@ nav h2::first-line {
   margin-top: auto;
   margin-bottom: 0;
 }
-#services h2::after {
+#services h3::after {
   margin-left: auto;
   margin-right: auto;
   margin-top: 1rem;
@@ -2244,7 +2245,7 @@ nav h2::first-line {
 #services .developer-training .call-to-action {
   background-color: #926fb1;
 }
-#services .web-design h2::before {
+#services .web-design h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
@@ -2264,7 +2265,7 @@ nav h2::first-line {
   height: 3.75rem;
   margin: 0 auto 1.0625rem;
 }
-#services .it-support h2::before {
+#services .it-support h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
@@ -2284,14 +2285,14 @@ nav h2::first-line {
   height: 3.75rem;
   margin: 0 auto 1.0625rem;
 }
-#services .telecoms-services h2::before {
+#services .telecoms-services h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border-radius: 50%;
@@ -2304,7 +2305,7 @@ nav h2::first-line {
   height: 3.75rem;
   margin: 0 auto 1.0625rem;
 }
-#services .bespoke-software h2::before {
+#services .bespoke-software h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
@@ -2324,7 +2325,7 @@ nav h2::first-line {
   height: 3.75rem;
   margin: 0 auto 1.0625rem;
 }
-#services .digital-marketing h2::before {
+#services .digital-marketing h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
@@ -2344,14 +2345,14 @@ nav h2::first-line {
   height: 3.75rem;
   margin: 0 auto 1.0625rem;
 }
-#services .cyber-security h2::before {
+#services .cyber-security h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border-radius: 50%;
@@ -2364,14 +2365,14 @@ nav h2::first-line {
   height: 3.75rem;
   margin: 0 auto 1.0625rem;
 }
-#services .developer-training h2::before {
+#services .developer-training h3::before {
   font-family: "netmatters-icons" !important;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  content: "";
+  content: "";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border-radius: 50%;
@@ -2387,57 +2388,57 @@ nav h2::first-line {
 #services a:hover {
   color: #fff;
 }
-#services a:hover h2::before,
-#services a:hover h2::after,
+#services a:hover h3::before,
+#services a:hover h3::after,
 #services a:hover .call-to-action {
   background-color: #fff;
 }
 #services a.web-design:hover {
   background-color: #926fb1;
 }
-#services a.web-design:hover h2::before,
+#services a.web-design:hover h3::before,
 #services a.web-design:hover .call-to-action {
   color: #926fb1;
 }
 #services a.it-support:hover {
   background-color: #4183d7;
 }
-#services a.it-support:hover h2::before,
+#services a.it-support:hover h3::before,
 #services a.it-support:hover .call-to-action {
   color: #4183d7;
 }
 #services a.telecoms-services:hover {
   background-color: #d64541;
 }
-#services a.telecoms-services:hover h2::before,
+#services a.telecoms-services:hover h3::before,
 #services a.telecoms-services:hover .call-to-action {
   color: #d64541;
 }
 #services a.bespoke-software:hover {
   background-color: #67809f;
 }
-#services a.bespoke-software:hover h2::before,
+#services a.bespoke-software:hover h3::before,
 #services a.bespoke-software:hover .call-to-action {
   color: #67809f;
 }
 #services a.digital-marketing:hover {
   background-color: #2ecc71;
 }
-#services a.digital-marketing:hover h2::before,
+#services a.digital-marketing:hover h3::before,
 #services a.digital-marketing:hover .call-to-action {
   color: #2ecc71;
 }
 #services a.cyber-security:hover {
   background-color: #f62459;
 }
-#services a.cyber-security:hover h2::before,
+#services a.cyber-security:hover h3::before,
 #services a.cyber-security:hover .call-to-action {
   color: #f62459;
 }
 #services a.developer-training:hover {
   background-color: #926fb1;
 }
-#services a.developer-training:hover h2::before,
+#services a.developer-training:hover h3::before,
 #services a.developer-training:hover .call-to-action {
   color: #926fb1;
 }
