--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -32,13 +32,13 @@
         font-size: theme.$hero-heading-size;
         font-weight: 400;
         text-transform: uppercase;
-        margin: 0 0 0.5em;
+        margin: 0 0 utility.px-to-rem(25px);
     }
     
     p {
         font-size: theme.$hero-para-size;
         line-height: 1.8;
-        margin: 0;
+        margin: 0 0 utility.px-to-rem(35px);
     }
     
     .call-to-action {
@@ -49,7 +49,7 @@
             $width: 14rem,
             $height: 3.8rem,
         );
-        margin-bottom: 0;
+        margin: 0 auto;
 
         &:hover {
             background-color: theme.get-sub-colour-for-service("web-design");
@@ -57,8 +57,7 @@
 
         // generate icon after the text
         &::after {
-            @include icons.icon(icons.icon-unicode-from-name("right-arrow"));
-            font-size: 0.75em;
+            @include icons.icon(icons.icon-unicode-from-name("right-arrow"), 0.75em);
             padding-left: 0.9rem;
         }
     }
